  initialization procedures (including standby creation and recovery) and
  improve their observability
- Record Kubernetes events to be used by `kubectl describe` and
  `kubectl get events`
- Introduce Kubernetes expectations for Pods, PVCs, and Jobs to prevent race
  conditions
- Set `application_name` in PostgreSQL to the name of the Pod/instance
- Bug fixes and improvements

Version 0.5.0 - 20 Nov 2020

- Automated provisioning of an independent Certification Authority (CA) for
  each PostgreSQL cluster
- Transparent and native support for TLS/SSL connections to encrypt
  client/server communications
- Improve the security of the standby streaming replication channel through:
    - a dedicated and fixed database user called `streaming_replica` with sole
      `REPLICATION` privileges
    - an automatically managed X.509 TLS certificate signed by the cluster
      Certification Authority to authenticate the `streaming_replica` user
- Improve PostgreSQL configuration capability through:
    - a mutating webhook that prevents users from changing those parameters
      that are directly managed by the operator
    - a defaulting webhook that integrates the users' supplied configuration
      options with default values in the cluster state
    - automated management of the PostgreSQL instances reload and restart
- Enable custom and independent configuration of a PostgreSQL cluster following
  a recovery from a backup
- Convey the current status of the cluster (i.e. healthy, failover in progress,
  switchover in progress)
- API change from k8s.2ndq.io to k8s.enterprisedb.io

Version 0.4.0 - 5 Nov 2020

- Support for full recovery from a backup
- Add `bootstrap` section to configure how to initiate a cluster: `initDB`
  or `fullRecovery`
- Introduce defaulting and validating webhooks
- Simplify configuration (convention over configuration)
- Constrain rolling upgrades to the same PostgreSQL major version
- End-to-end tests run on GKE, AKS and GKS