@@ -9,6 +9,6 @@ spec:
     size: 5Gi
 
   bootstrap:
-    fullRecovery:
+    recovery:
       backup:
         name: backup-example
